# qify

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: python.yml
qify/: __init__.py  typing.py
qify/channel/: __init__.py  _core.py  core.py
qify/measure/: __init__.py  bayes.py  bayes_vuln.py  g.py
qify/probab_dist/: __init__.py  core.py
tests/: test_channel.py  test_probab_dist.py
tests/measure/: test_bayes.py  test_bayes_vuln.py  test_g.py
